Fix nonograms basic solve logic difficulty 1 (#7)
* latest version of app with some code cleanup

* General clean part 1

* Dodanie jsonow z zagadkami, wpis w gitignore

* Dodanie komponentu

* Zmiany separatora

* Delete comment

* Refactor

* Delete unnecessary files

* Move isSolved to nonogramParams abstract class

* Extract print checked solver state method

* Constant of json extension length

* Extract method for creating filepath for nonogram solution

* Commented code remove

* Delete already existing repository methods

* Lombok Getter instead many get methods

* Encapsulate state - newStepsMade & solutionInvalid marker

* Enum for NonogramActions

* Enum for NonogramActions part 2

* Move static methods to another class

* Code refactor

* Nonogram - actions to do list instead of iterating through all actions - initial changes

* Refactor and removing unused methods

* Clean code and fill mistakes

* Repair code

* Delete time measure from nonogramSolver

* Huge refactor

* CleanUp and make logic classes consistent

* Test solving simple nonogram step by step using custom way

* Refactor - "X" and "O" as constants

* Refactor - remove unnecesary local variables and add few Field variables

* Test cleanup

* Constants extracting

* if statement format

* if statement format 2

* if statement format 3 and small refactor

* Refactor actionEnum

* Small refactor

* Some debug info

* Fixes and refactors

* Remove unused constants

* Simplify solutionNode solve

* Add marking fields after fill overlapping

* Correct placing X in too short empty sequences, correct ranges after marking field with possible range update, refactor

* Extend coloured fields dependencies, refactor

* Move methods to parent class

* Changes in actionConstants, small logic change when extending coloured field

* Update .gitignore

* Update .gitignore

* Update .gitignore 2

* Update .gitig