@@ -2,12 +2,12 @@ package com.puzzlesolverappbackend.puzzleAppFileManager.controllers;
 
 import com.google.gson.Gson;
 import com.puzzlesolverappbackend.puzzleAppFileManager.model.Nonogram;
-import com.puzzlesolverappbackend.puzzleAppFileManager.payload.NonogramFileDetails;
-import com.puzzlesolverappbackend.puzzleAppFileManager.payload.NonogramFiltersResponse;
+import com.puzzlesolverappbackend.puzzleAppFileManager.puzzlespecific.nonogram.NonogramFileDetails;
+import com.puzzlesolverappbackend.puzzleAppFileManager.puzzlespecific.nonogram.NonogramFiltersResponse;
+import com.puzzlesolverappbackend.puzzleAppFileManager.puzzlespecific.nonogram.NonogramService;
 import com.puzzlesolverappbackend.puzzleAppFileManager.repository.NonogramRepository;
 import com.puzzlesolverappbackend.puzzleAppFileManager.runners.InitializerConstants;
 import com.puzzlesolverappbackend.puzzleAppFileManager.services.CommonService;
-import com.puzzlesolverappbackend.puzzleAppFileManager.services.NonogramService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -19,11 +19,12 @@ import org.springframework.web.bind.annotation.*;
 import javax.validation.Valid;
 import java.io.FileWriter;
 import java.io.IOException;
-
 import java.util.Arrays;
-import java.util.Set;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Set;
+
+import static com.puzzlesolverappbackend.puzzleAppFileManager.constants.SharedConsts.JSON_EXTENSION;
+import static com.puzzlesolverappbackend.puzzleAppFileManager.constants.SharedConsts.JSON_EXTENSION_LENGTH;
 
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
@@ -42,7 +43,8 @@ public class NonogramController {
     Pageable nonogramsPageable;
 
     @PostMapping("/save")
-    public ResponseEntity<String> saveNonogramToJsonFile(@RequestParam String fileName, @Valid @RequestBody NonogramFileDetails nfd) {
+    public ResponseEntity<String> saveNonogramToJsonFile(@RequestParam String fileName,
+                                                         @Valid @RequestBody NonogramFileDetails nonogramFileDetails) {
         System.out.println("saving nonogram: " + fileName);
 
         String nonogramsPath = InitializerConstants.PUZZLE_RELATIVE_PATH + InitializerConstants.PuzzleMappings.NONOGRAM_PATH_SUFFIX;
@@ -53,23 +55,22 @@ public class NonogramController {
         String[] fileNamesWithoutExtension = existingFilesNames.toArray(String[]::new);
         List<String> fileNamesWithoutExtensionArray = Arrays.stream(fileNamesWithoutExtension
                 .clone())
-                .map(fN -> fN.substring(0, fN.length() - 5)) // ".json"
-                .collect(Collectors.toList());
+                .map(fN -> fN.substring(0, fN.length() - JSON_EXTENSION_LENGTH))
+                .toList();
 
-        if(fileNamesWithoutExtensionArray.contains(fileName)) {
+        if (fileNamesWithoutExtensionArray.contains(fileName)) {
             return new ResponseEntity<>("Save failed. File with same name already exists.", HttpStatus.OK);
         }
 
         Gson gson = new Gson();
 
-        FileWriter abc;
+        FileWriter fileWriter;
         try {
-            abc = new FileWriter(nonogramsPath + fileName + ".json");
-            gson.toJson(nfd, abc);
-            abc.close();
+            fileWriter = new FileWriter(nonogramsPath + fileName + JSON_EXTENSION);
+            gson.toJson(nonogramFileDetails, fileWriter);
+            fileWriter.close();
             return new ResponseEntity<>("Save success!", HttpStatus.OK);
         } catch (IOException e) {
-            e.printStackTrace();
             return new ResponseEntity<>("Exception external problem.", HttpStatus.OK);
         }
     }
@@ -93,7 +94,7 @@ public class NonogramController {
 
     @GetMapping("/getFilters")
     public ResponseEntity<NonogramFiltersResponse> getNonogramFilters() {
-        return new ResponseEntity<>(nonogramService.getNonogramFilters(), HttpStatus.OK );
+        return new ResponseEntity<>(nonogramService.getNonogramFilters(), HttpStatus.OK);
     }
 
     @GetMapping("/getNonogramsList")
